final edits to figures

--- a/Fig_5/Fig_5A/Density_LineGraph.html
+++ b/Fig_5/Fig_5A/Density_LineGraph.html
@@ -356,7 +356,8 @@ display: none;
 </div>
 
 
-<pre class="r"><code># function to process Nm bed files and overlay them with ribo-seq results to get RPKM around Nm position 
+<pre class="r"><code>setwd(&quot;/Volumes/fsmresfiles/Basic_Sciences/Pharm/Arango_Lab/Quest/2ometh/Serio_2O-me_initiation/Fig_5/Fig_5A/&quot;)
+# function to process Nm bed files and overlay them with ribo-seq results to get RPKM around Nm position 
 process_position &lt;- function(atg_profile) {
   # Load data
   MH85_data &lt;- read_csv(paste0(&quot;MH85_&quot;, atg_profile, &quot;.csv&quot;))
